# models/Actors.js
@@ -2,7 +2,8 @@ var mongoose = require('mongoose');
 
 mongoose.model('Actor', new mongoose.Schema(
     {
-        _id: String,
         name: String,
-        birthdate: Date
-    }));
+        _id: String,
+        character:[]
+    }
+));
